# mucheck-tasty

./: .gitignore  CHANGELOG.md  README.md  cabal.project  mucheck-tasty.cabal
src/: Main.hs
src/Test/MuCheck/TestAdapter/: TastyAdapter.hs
src/Test/Tasty/: MuCheck.hs
test/: Main.hs  TastyTests.hs
