cabal-version:      3.4
name:               mucheck-tasty
version:            0.1.0.0
-- synopsis:
-- description:
homepage:           https://github.com/Matteo0301/mucheck-tasty
license:            GPL-2.0-only
license-file:       LICENSE
author:             Matteo Mariotti
maintainer:         matteomariotti0301@gmail.com
-- copyright:
category:           Testing
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.0
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite mucheck-tasty-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.0,
        mucheck-tasty
