cabal-version:      3.4
name:               mucheck-tasty
version:            0.1.0.0
-- synopsis:
-- description:
homepage:           https://github.com/Matteo0301/mucheck-tasty
license:            GPL-2.0-only
license-file:       LICENSE
author:             Matteo Mariotti
maintainer:         matteomariotti0301@gmail.com
-- copyright:
category:           Testing
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Test.MuCheck.TestAdapter.TastyAdapter
                      , Test.Tasty.MuCheck
    -- other-modules:
    -- other-extensions:
    build-depends:    base,
                        tasty,
                        MuCheck
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite mucheck-tasty-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    ghc-options:      -fhpc
    build-depends:
        base,
        mucheck-tasty,
        tasty,
        tasty-hunit
    other-modules: TastyTests

executable example
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   src
    main-is:          Main.hs
    build-depends:
        base,
        mucheck-tasty,
        tasty,
        MuCheck,
        hint
    other-modules: Test.MuCheck.TestAdapter.TastyAdapter
